--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -52,3 +52,27 @@ td:hover {
   border-top: 0;
   padding-top: 0;
 }
+.nav-link.active {
+  background-color: unset !important;
+  font-weight: bold;
+}
+
+input[type=checkbox] {
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  padding: 10px;
+}
+
+/* Might want to wrap a span around your checkbox text */
+.checkboxtext {
+  /* Checkbox text */
+  font-size: 110%;
+  display: inline;
+}
+
+.dropleft .dropdown-toggle::before {
+  display: none;
+}
